# classificador_iris

./: pyproject.toml
classificador_iris/: flower_predict_app.py
classificador_iris/controllers/: decision_tree_controller.py  knn_controller.py  regression_logistic_controller.py  svm_controller.py
classificador_iris/services/: decision_tree_predict_service.py  knn_predict_service.py  regression_logistic_predicts_service.py  svm_predicts_service.py
classificador_iris/templates/: index.html
models/: decision_tree_model.pck  knn_model.pck
notebooks/: clients.ipynb  clients_curl.ipynb  decision_trees.ipynb  knn.ipynb  regressio_logistica.ipynb  svm.ipynb
tests/: test_models_prediction.py
